templates/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vector-api-ingress
  namespace: vectoratlas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  # This removes "/vector-api" from the URL
spec:
  rules:
  - host: test.vectoratlas.icipe.org
    http:
      paths:
        - path: /vector-api(/|$)(.*)  # Capture group for the rest of the path after /vector-api
          pathType: ImplementationSpecific
          backend:
            service:
              name: api
              port:
                number: 3001
  ingressClassName: nginx
